adding scroll top padding property so that the heading does not hide behind the navbar

--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
 </head>
+<body>
 <nav class="navbar">
     <img src="sid (1).png" alt="">
     <ul>
         <li><a href="#intro">Home</a></li>
         <li><a href="#About">About</a></li>
-        <li><a href="#skills">Skills</a></li>
+        <li><a href="#skills" data-offset="700">Skills</a></li>
         <li><a href="#contact">Contact Me</a></li>
     </ul>
 </nav>
 <div class="container">
-    <div id="intro">
+    <div id="intro" class="section">
         <div class="wavify">
             <span style="--i:1">H</span>
             <span style="--i:2">E</span>
@@ -37,7 +38,7 @@
         <a href="#About"> <button type="button" class="btn btn-primary">More About Me</button></a>
 
     </div>
-    <div id="skills">
+    <div id="skills" class="section">
         <div class="wavify">
             <span style="--i:1">S</span>
             <span style="--i:2">K</span>
@@ -91,7 +92,7 @@
             </div>
         </div>
     </div>
-    <div id="About">
+    <div id="About" class="section">
         <div class="wavify">
             <span style="--i:1">A</span>
             <span style="--i:2">B</span>
@@ -109,7 +110,7 @@
             full stack web development.DSA practice is my daily goal and looking forward to doing projects in the coming
             months.</div>
     </div>
-    <section id="contact">
+    <section id="contact" class="section">
         <div class="contact container">
             <div class="wavify">
                 <span style="--i:1">C</span>
@@ -162,7 +163,7 @@
         created by Siddharth Kelkar on 20/1122
     </footer>
 
-    <body>
+    <script src="index.js"></script>
 
     </body>
 
